update 1.58 : amélioration de Mahjong + retour menu forcé

--- a/mini-jeux/greenMahjong/js/local/fr/app.properties
+++ b/mini-jeux/greenMahjong/js/local/fr/app.properties
@@ -16,7 +16,7 @@ FourHills-Tricky=Quatre collines - DIFFICILE
 startNewGame=Nouveau jeu
 changeTheme=Changer thème
 gameStatistics=Statistiques de jeux
-resumeGame=Retour
+resumeGame=Fermer
 statistics=Statistiques
 numberOfGamesWon=Jeux gagnés: 
 from= sur 
